--- a/src/main/resources/net/senmori/project/spigot/spigot_settings.toml
+++ b/src/main/resources/net/senmori/project/spigot/spigot_settings.toml
@@ -8,7 +8,7 @@ mc_version_manifest_link = "https://launchermeta.mojang.com/mc/game/version_mani
 [versions]
 spigot = "1.15.2"
 maven = "3.5.0"
-portal_git = "2.15.0"
+portable_git = "2.15.0"
 
 
 output_directories = [
